--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@sendgrid/mail": "^7.4.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-validator": "^6.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.13",
     "nodemailer": "^6.4.16",
